feat(runtime): select ownership by loader capability