@@ -8,7 +8,7 @@ public final class ObservedRandomAccessFile extends RandomAccessFile {
     public ObservedRandomAccessFile(String name, String mode, String owner) throws FileNotFoundException {
         super(Recorder.beforePath(name), mode);
         boolean existed = Recorder.takeBefore();
-        if (!mode.equals("r")) Recorder.write(java.nio.file.Path.of(name), existed, owner);
+        if (!mode.equals("r")) Recorder.write(java.nio.file.Paths.get(name), existed, owner);
     }
     public ObservedRandomAccessFile(File file, String mode, String owner) throws FileNotFoundException {
         super(Recorder.beforeFile(file), mode);
